syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.interledger.spsp.server.grpc";

package org.interledger.stream.proto;

import "send_payment_request.proto";
import "send_payment_response.proto";

// RPCs available to interact with Hermes.
service IlpOverHttpService {

    // Send a payment through Hermes to a given payment pointer
    rpc SendMoney (SendPaymentRequest) returns (SendPaymentResponse);

}

// Real Methods
//

// Temporary Methods
// Sign-up for ILP (create ILP Account)
// Get Account Details for AccountId
//
